--- a/app/src/main/res/layout/activity_register_otp.xml
+++ b/app/src/main/res/layout/activity_register_otp.xml
@@ -48,47 +48,27 @@
                 android:id="@+id/btnCandidate"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="16dp"
+                android:alpha="0.5"
                 android:background="@drawable/button_background"
+                android:gravity="center"
                 android:text="Candidate"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
-                android:layout_marginRight="10dp"
-                android:gravity="center"
-                android:alpha="0.5"
                 app:cornerRadius="5dp"
-                app:layout_constraintEnd_toStartOf="@id/btnEmployee"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewRoleLabel" />
-
-            <Button
-                android:id="@+id/btnEmployee"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/button_background"
-                android:text="Employee"
-                android:layout_marginLeft="10dp"
-                android:textColor="@android:color/white"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:alpha="0.5"
-                app:cornerRadius="5dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btnCandidate"
                 app:layout_constraintTop_toBottomOf="@id/textViewRoleLabel" />
 
             <TextView
                 android:id="@+id/textViewPhoneLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:paddingBottom="4dp"
                 android:text="Phone"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btnEmployee" />
+                app:layout_constraintTop_toBottomOf="@+id/btnCandidate" />
 
             <TextView
                 android:id="@+id/textViewPhoneAsterisk"
