--- a/app/src/main/res/layout/activity_register_password.xml
+++ b/app/src/main/res/layout/activity_register_password.xml
@@ -36,9 +36,9 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-black"
                 android:paddingBottom="16dp"
-                android:text="Select Role"
-                android:textSize="20sp"
+                android:text="Register"
                 android:textColor="@color/black"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,35 +48,16 @@
                 android:id="@+id/btnCandidatePassword"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:background="@drawable/button_background"
+                android:gravity="center"
                 android:text="Candidate"
-                android:gravity="center"
-                app:cornerRadius="5dp"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
 
-                android:background="@drawable/button_background"
+                app:cornerRadius="5dp"
 
-                app:layout_constraintEnd_toStartOf="@+id/btnEmployeePassword"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewSelectRole"
-                android:layout_marginEnd="8dp"/>
-
-            <Button
-                android:id="@+id/btnEmployeePassword"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:text="Employee"
-                android:background="@drawable/button_background"
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:cornerRadius="5dp"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/white"
-
-                app:layout_constraintStart_toEndOf="@id/btnCandidatePassword"
-                app:layout_constraintTop_toBottomOf="@id/textViewSelectRole"
-                android:layout_marginStart="8dp"/>
+                app:layout_constraintTop_toBottomOf="@id/textViewSelectRole" />
 
             <TextView
                 android:id="@+id/textViewPasswordLabel"
